--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     	<init-param>
       		<param-name>com.sun.jersey.config.property.packages</param-name>
-      		<param-value>com.example.services</param-value>
+      		<param-value>com.MWBFServer.RestActions</param-value>
     	</init-param>
   	</servlet>
   	<servlet-mapping>
