--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,28 @@
     <build>
         <plugins>
         
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-dependency-plugin</artifactId>
+	            <version>2.3</version>
+	            <executions>
+	                <execution>
+	                    <phase>package</phase>
+	                    <goals><goal>copy</goal></goals>
+	                    <configuration>
+	                        <artifactItems>
+	                            <artifactItem>
+	                                <groupId>com.github.jsimone</groupId>
+	                                <artifactId>webapp-runner</artifactId>
+	                                <version>7.0.40.0</version>
+	                                <destFileName>webapp-runner.jar</destFileName>
+	                            </artifactItem>
+	                        </artifactItems>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
+	        
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -152,9 +174,10 @@
 		        <artifactId>tomcat7-maven-plugin</artifactId>
 		        <version>7</version>
       		</plugin>
+      		
         </plugins>
-
-        <pluginManagement>
+        
+      	<pluginManagement>
             <plugins>
 
                 <!-- M2Eclipse Compatibility -->
