--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 	      <version>2.1</version>
 	      <scope>provided</scope>
 	    </dependency>
+	    
+	    <!--  Quartz Job Scheduler -->
+	    <dependency>
+    		<groupId>org.quartz-scheduler</groupId>
+    		<artifactId>quartz</artifactId>
+    		<version>2.2.1</version>
+		</dependency>
     
     	<!-- Jersey -->
 	    <dependency>
