--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,10 @@
        <listener-class>com.MWBFServer.Services.BonusContextListener</listener-class>
     </listener>
     
+    <listener>
+       <listener-class>com.MWBFServer.Services.CacheLoaderContextListener</listener-class>
+    </listener>
+    
     <session-config>
         <session-timeout>
             30
