Changed the URL for security reasons

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
   	</servlet>
   	<servlet-mapping>
     	<servlet-name>RestServlet</servlet-name>
-    	<url-pattern>/mwbf/*</url-pattern>
+    	<url-pattern>/mwbf-api/*</url-pattern>
   	</servlet-mapping>
     
     <listener>
