--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 	      <scope>provided</scope>
 	    </dependency>
 	    
-	    <!--  Quartz Job Scheduler -->
+	    <!--  Google guava -->
 	    <dependency>
-    		<groupId>org.quartz-scheduler</groupId>
-    		<artifactId>quartz</artifactId>
-    		<version>2.2.1</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
 		</dependency>
     
     	<!-- Jersey -->
