--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>org.MWBFServer</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <artifactId>MWBFServer</artifactId>
     <packaging>war</packaging>
     
